<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:padding="8dp">

    <TextView
        android:id="@+id/countryIndexTxt"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/countryPopTxt"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="200"
        android:textAlignment="center"
        android:textSize="@dimen/countryTextSizeLarge" />

    <ImageView
        android:id="@+id/flagImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/countryNameTxt"
        android:layout_alignBottom="@id/countryNameTxt"
        android:layout_toEndOf="@id/countryIndexTxt"
        android:adjustViewBounds="true"
        android:maxWidth="25dp"
        android:paddingTop="2dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/resource_null_flag"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/countryNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:layout_toStartOf="@id/countryCasesTxt"
        android:layout_toEndOf="@id/flagImg"
        android:text="@string/country_name"
        android:textSize="@dimen/countryTextSizeLarge" />

    <TextView
        android:id="@+id/countryPopTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countryNameTxt"
        android:layout_toEndOf="@id/countryIndexTxt"
        android:text="@string/country_population"
        android:textColor="@color/colorDarkWhite"
        android:textSize="@dimen/countryTextSizeMed" />

    <TextView
        android:id="@+id/countryCasesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/countryNameTxt"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        android:text="@string/total_cases"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorYellow"
        android:textSize="@dimen/countryTextSizeLarge" />

    <TextView
        android:id="@+id/countryDeathsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/countryPopTxt"
        android:layout_alignEnd="@+id/countryCasesTxt"
        android:layout_marginStart="8dp"
        android:text="@string/total_deaths"
        android:textAlignment="center"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/countryTextSizeMed" />
</RelativeLayout>