<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".OverviewFragment">

    <ImageView
        android:id="@+id/covidImg"
        android:layout_width="@dimen/covidImageSize"
        android:layout_height="@dimen/covidImageSize"
        android:layout_gravity="center"
        android:alpha="@dimen/covidImageAlpha"
        app:layout_constraintBottom_toBottomOf="@+id/globalDeathsValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/globalCasesValue"
        app:srcCompat="@drawable/covid" />

    <TextView
        android:id="@+id/globalCasesTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/counterPadding"
        android:text="@string/total_cases"
        android:textSize="@dimen/counterTitleTextSize"
        app:layout_constraintBottom_toTopOf="@+id/globalCasesValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/globalCasesValue" />

    <TextView
        android:id="@+id/globalCasesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorDarkWhite"
        android:textSize="@dimen/counterBodyTextSize"
        app:layout_constraintBottom_toTopOf="@+id/globalDeathsValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77"
        tools:text="52,343,187" />

    <TextView
        android:id="@+id/globalCasesChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:paddingTop="@dimen/counterPadding"
        android:textAlignment="center"
        android:textColor="@color/colorYellow"
        android:textSize="@dimen/counterSubTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/globalCasesValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/globalCasesValue"
        tools:text="+1256" />

    <TextView
        android:id="@+id/globalDeathsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/counterPadding"
        android:text="@string/total_deaths"
        android:textSize="@dimen/counterTitleTextSize"
        app:layout_constraintBottom_toTopOf="@+id/globalDeathsValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/globalDeathsValue" />

    <TextView
        android:id="@+id/globalDeathsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorDarkWhite"
        android:textSize="@dimen/counterBodyTextSize"
        app:layout_constraintBottom_toTopOf="@+id/lastUpdatedTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/globalCasesValue"
        tools:text="1,330,291" />

    <TextView
        android:id="@+id/globalDeathsChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/counterPadding"
        android:textAlignment="center"
        android:textColor="@color/colorRed"
        android:textSize="@dimen/counterSubTextSize"
        app:layout_constraintBottom_toBottomOf="@+id/globalDeathsValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/globalDeathsValue"
        tools:text="+239" />

    <TextView
        android:id="@+id/lastUpdatedTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_updated"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/lastUpdatedValue"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/globalDeathsValue" />

    <TextView
        android:id="@+id/lastUpdatedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/never_updated"
        android:textColor="@color/colorDarkWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/lastUpdatedTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lastUpdatedTxt"
        app:layout_constraintTop_toTopOf="@+id/lastUpdatedTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>